--- a/FE1_Restaurant_Food/css/style.css
+++ b/FE1_Restaurant_Food/css/style.css
@@ -26,6 +26,30 @@ html {
     scroll-behavior: smooth;
 }
 
+section {
+    padding: 2rem 9%;
+}
+
+section:nth-child(even) {
+    background: #eee;
+}
+
+.btn {
+    margin-top: 1rem;
+    display: inline-block;
+    font-size: 1.7rem;
+    color: #fff;
+    background: var(--black);
+    border-radius: 0.5rem;
+    cursor: pointer;
+    padding: 0.8rem 3rem;
+}
+
+.btn:hover {
+    background: var(--green);
+    letter-spacing: 0.1rem;
+}
+
 header {
     position: fixed;
     top: 0; left: 0; right: 0;
@@ -134,14 +158,60 @@ header .icons #menu-bars {
     font-size: 4rem;
 }
 
+
+.home .home-slider .slide {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 11rem;
+    padding-top: 9rem;
+}
+
+.home .home-slider .slide .content {
+    flex: 1 1 45rem;
+}
+
+.home .home-slider .slide .image {
+    flex: 1 1 45rem;
+}
+
+.home .home-slider .slide .image img {
+    width: 100%;
+}
+
+.home .home-slider .slide .content span {
+    color: var(--green);
+    font-size: 2.5rem;
+}
+
+.home .home-slider .slide .content h3 {
+    color: var(--black);
+    font-size: 7rem;
+}
+
+.home .home-slider .slide .content p {
+    color: var(--light-color);
+    font-size: 2.2rem;
+    padding: 0.5rem 0;
+    line-height: 2.5rem;
+}
+
+.swiper-pagination-bullet-active {
+    background: var(--green);
+}
+
 /* media queries */
 @media (max-width: 991px) {
     html {
-        font-size: 50%;
+        font-size: 55%;
     }
 
     header {
         padding: 1rem 2rem;
+    }
+
+    section {
+        padding: 2rem;
     }
 }
 
@@ -177,4 +247,14 @@ header .icons #menu-bars {
         margin: 0 1rem;
     }
 
+    .home .home-slider .slide .content h3 {
+        font-size: 5rem;
+    }
+
+}
+
+@media (max-width: 991px) {
+    html {
+        font-size: 50%;
+    }
 }
