FE_1_Restaurant_Food: order section

--- a/FE1_Restaurant_Food/css/style.css
+++ b/FE1_Restaurant_Food/css/style.css
@@ -438,10 +438,10 @@ header .icons #menu-bars {
     margin-left: 1rem;
     font-size: 2.5rem;
 }
-
+/* 
 .review {
     height: 100vh;
-}
+} */
 
 .review-slider {
     overflow: hidden;
@@ -453,7 +453,7 @@ header .icons #menu-bars {
     border: 1rem solid rgba(0, 0, 0, 0.2);
     border-radius: 0.5rem;
     position: relative;
-    margin-top: 2.8rem;
+    margin: 2.8rem 0;
 }
 
 .review .slide .fa-quote-right {
@@ -495,6 +495,60 @@ header .icons #menu-bars {
     line-height: 1.8rem;
     color: var(--light-color);
 }
+
+.order form {
+    max-width: 90rem;
+    border-radius: 0.5rem;
+    box-shadow: var(--box-shadow);
+    border: 0.1rem solid rgba(0, 0, 0, 0.2);
+    background: #fff;
+    padding: 1.5rem;
+    margin: 0 auto;
+}
+
+.order form .inputBox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.order form .inputBox .input {
+    width: 49%;
+}
+
+.order form .inputBox .input span {
+    display: block;
+    padding: 0.5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+
+.order form .inputBox .input input,
+.order form .inputBox .input textarea {
+    background: #eee;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color: var(--black);
+    text-transform: none;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+.order form .inputBox .input input:hover,
+.order form .inputBox .input textarea:hover {
+    border: 0.1rem solid var(--green)
+}
+
+.order form .inputBox .input textarea {
+    height: 20rem;
+    resize: none;
+}
+
+.order form .inputBox .btn {
+    margin-top: 2rem;
+}
+
 
 /* media queries */
 @media (max-width: 991px) {
@@ -549,7 +603,7 @@ header .icons #menu-bars {
 
 }
 
-@media (max-width: 991px) {
+@media (max-width: 450px) {
     html {
         font-size: 50%;
     }
@@ -558,4 +612,9 @@ header .icons #menu-bars {
         height: auto;
         width: 100%;
     }
+
+    .order form .inputBox .input {
+        width: 100%;
+    }
+    
 }
