--- a/FE1_Restaurant_Food/css/style.css
+++ b/FE1_Restaurant_Food/css/style.css
@@ -546,9 +546,51 @@ header .icons #menu-bars {
 }
 
 .order form .inputBox .btn {
-    margin-top: 2rem;
+    margin-top: 0;
 }
 
+.footer .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    gap: 1.4rem;
+}
+
+.footer .box-container .box {
+    padding-left: 2rem;
+}
+
+
+.footer .box-container .box h3 {
+    padding: 0.5rem 0;
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.footer .box-container .box a {
+    display: block;
+    padding: 0.5rem 0.5rem;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+
+.footer .box-container .box a:hover {
+    color: var(--green);
+    text-decoration: underline;
+}
+
+.footer .credit {
+    text-align: center;
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+    font-size: 2rem;
+    color: var(--black);
+    padding: 0.5rem;
+    padding-top: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.footer .credit span {
+    color: var(--green);
+}
 
 /* media queries */
 @media (max-width: 991px) {
@@ -611,6 +653,10 @@ header .icons #menu-bars {
     .dishes .box-container .box img {
         height: auto;
         width: 100%;
+    }
+
+    .review .slide {
+        padding: 4rem;
     }
 
     .order form .inputBox .input {
