FE_1_Restaurant_Food: final submit: loader

--- a/FE1_Restaurant_Food/css/style.css
+++ b/FE1_Restaurant_Food/css/style.css
@@ -592,6 +592,28 @@ header .icons #menu-bars {
     color: var(--green);
 }
 
+.loader-container {
+    position: fixed;
+    top: 0; left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10000;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.loader-container img {
+    width: 35rem;
+}
+
+.fade-out {
+    top: 110%;
+    opacity: 0;
+}
+
 /* media queries */
 @media (max-width: 991px) {
     html {
