FE2_Restaurant_Multiple_Pages: Nav Menu

--- a/FE2_Restaurant_Mutiple_Pages/globalStyles.css
+++ b/FE2_Restaurant_Mutiple_Pages/globalStyles.css
@@ -19,7 +19,8 @@ html {
 
 body {
     background-color: var(--lightGreen-2);
-    overflow-x: hidden;
+    /* set hidden later */
+    overflow: hidden; 
 }
 
 section {
@@ -33,7 +34,7 @@ section {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 1000px;
     width: 90%;
     margin: 0 auto;
 }
@@ -41,7 +42,7 @@ section {
 img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 }
 
