--- a/FE2_Restaurant_Mutiple_Pages/home.css
+++ b/FE2_Restaurant_Mutiple_Pages/home.css
@@ -343,3 +343,131 @@
         display: none;
     }
 }
+
+/* Events Media Section styles */
+.eventsMedia__wrapper {
+    display: flex;
+    gap: 1rem;
+}
+
+.eventsMedia__1 {
+    position: relative;
+}
+
+.eventsMedia__1__playButton {
+    display: inline-block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 70px;
+}
+
+@media only screen and (min-width: 768px) {
+    .eventsMedia__wrapper {
+        gap: 2rem;
+    }
+
+    .eventsMedia__1__palyButton {
+        max-width: 100px;
+    }
+}
+
+/* Events Info Section styles */
+.eventsInfo {
+    padding-top: 0;
+}
+
+.eventsInfo__wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.eventsInfo__item {
+    display: flex;
+    gap: 1rem;
+    padding: 1rem;
+    background: var(--lightGreen-1);
+    margin-bottom: 1.5rem;
+    border-radius: 12px;
+}
+
+.eventsInfo__item__img {
+    border-radius: 12px;
+    overflow: hidden;
+    flex: 3;
+}
+
+.eventsInfo__item__img img {
+    object-fit: cover;
+    object-position: center;
+}
+
+.eventsInfo__item__info {
+    flex: 4;
+}
+
+.eventsInfo__item__title {
+    font-size: 1.7rem;
+    margin-bottom: 1rem;
+    color: var(--black-1);
+}
+
+.eventsInfo__item__text {
+    font-size: 1.4rem;
+    color: var(--black-2);
+}
+
+.eventsInfo__right {
+    margin-top: 2rem;
+}
+
+.eventsInfo__title {
+    font-size: 1.8rem;
+    color: var(--black-1);
+    margin-bottom: 1rem;
+}
+
+.eventsInfo__text {
+    color: var(--black-2);
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+}
+
+@media only screen and (min-width: 768px) {
+    .eventsInfo__wrapper {
+        flex-direction: row;
+        gap: 2rem;
+    }
+
+    .eventsInfo__left,
+    .eventsInfo__right {
+        flex: 1;
+        margin-left: 4rem;
+    }
+
+    .eventsInfo__item {
+        padding: 2rem;
+        gap: 2rem;
+        max-width: 500px;
+        margin-bottom: 2rem;
+    }
+
+    .eventsInfo__item__title {
+        font-size: 1.8rem;
+    }
+
+    .eventsInfo__item__text {
+        font-size: 1.6rem;
+    }
+
+    .eventsInfo__title {
+        font-size: 3.6rem;
+    }
+
+    .eventsInfo__text {
+        max-width: 500px;
+        font-size: 1.8rem;
+        margin-bottom: 2rem;
+    }
+}
