--- a/FE2_Restaurant_Mutiple_Pages/home.css
+++ b/FE2_Restaurant_Mutiple_Pages/home.css
@@ -471,3 +471,99 @@
         margin-bottom: 2rem;
     }
 }
+
+/* Why us section styles */
+.whyUs__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 4rem;
+    padding: 3rem;
+}
+
+.whyUs__left {
+    text-align: center;
+}
+
+.whyUs__title {
+    font-family: "Poppins";
+    font-size: 1.8rem;
+    color: var(--black-1);
+    font-weight: 500;
+    margin-bottom: 1rem;
+}
+
+.whyUs__text {
+    font-size: 1.4rem;
+}
+
+.whyUs__items__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+.whyUs__item {
+    background: var(--lightGreen-1);
+    padding : 2rem;
+    border-radius: 12px;
+    text-align: center;
+}
+
+.whyUs__item__icon {
+    max-width: 56px;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+}
+
+.whyUs__item__text {
+    font-family: "Poppins";
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--black-1);
+}
+
+@media only screen and (min-width: 768px) {
+    .whyUs__wrapper {
+        flex-direction: row;
+        max-width: 800px;
+        margin: 0 auto;
+    }
+
+    .whyUs__left {
+        flex: 4;
+        text-align: left;
+    }
+
+    .whyUs__right {
+        right: 3;
+    }
+
+    .whyUs__title {
+        font-size: 3.6rem;
+        margin-bottom: 2rem;
+    }
+
+    .whyUs__text {
+        font-size: 1.8rem;
+        line-height: 1.4em;
+    }
+
+    .whyUs__items__wrapper {
+        gap: 2rem;
+    }
+
+    .whyUs__item {
+        padding: 2rem;
+    }
+
+    .whyUs__item__icon {
+        max-width: 65px;
+        margin-bottom: 1.5rem;
+    }
+
+    .whyUs__item__text {
+        font-size: 1.8rem;
+    }
+}
