--- a/FE2_Restaurant_Mutiple_Pages/components.css
+++ b/FE2_Restaurant_Mutiple_Pages/components.css
@@ -396,3 +396,87 @@ footer {
         margin-bottom: 1rem;
     }
 }
+
+.form__group {
+    margin: 0.5rem 0.8rem;
+}
+
+.form__title {
+    font-size: 1.8rem;
+    margin-bottom: 2rem;
+}
+
+.form__group label {
+    font-size: 1.6rem;
+    font-family: "Poppins";
+    color: var(--black-2);
+    font-weight: 500;
+}
+
+.form__group input,
+.form__group textarea,
+.form__group select {
+    width: 100%;
+    border: none;
+    background-color: var(--lightGreen-1);
+    font-size: 1.4rem;
+    font-family: "Raleway";
+    font-weight: 600;
+    padding: 1rem;
+    border-radius: 8px;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    color: var(--black-2);
+}
+
+.form__group textarea {
+    resize: vertical;
+}
+
+.form__wrapper button[type='submit'] {
+    width: max-content;
+    border: none;
+    padding: 1rem 5rem;
+    font-weight: 500;
+    letter-spacing: 0.1rem;
+    margin-top: 1.5rem;
+    margin-left: 0.8rem
+}
+
+@media only screen and (min-width: 768px) {
+
+    .storeInfo {
+        margin-top: 6rem;
+        margin-bottom: 8rem;
+    }
+
+    .form__title {
+        font-size: 3.6rem;
+        margin-bottom: 0;
+    }
+
+    .form__wrapper {
+        padding: 5rem 0;
+    }
+
+    .form__wrapper .form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .form__group__full {
+        grid-column: 1/3;
+    }
+
+    .form__group label {
+        font-size: 1.8rem;
+    }
+
+    .form__group input,
+    .form__group textarea,
+    .form__group select {
+        font-size: 1.8rem;
+        padding: 2rem;
+        margin-top: 1.2rem;
+    }
+}
