--- a/FE2_Restaurant_Mutiple_Pages/menu.css
+++ b/FE2_Restaurant_Mutiple_Pages/menu.css
@@ -7,6 +7,7 @@
 .page__title__text {
     font-size: 2.2rem;
     color: var(--black-1);
+    font-weight: 600;
 }
 
 @media only screen and (min-width: 768px) {
